Feat: Categories CRUD

--- a/Frontend/blogApp/src/app/features/category/category-list/category-list.component.html
+++ b/Frontend/blogApp/src/app/features/category/category-list/category-list.component.html
@@ -11,6 +11,7 @@
         <th>Id</th>
         <th>Name</th>
         <th>Handle Url</th>
+        <th></th>
       </tr>
       </thead>
       <tbody>
@@ -18,6 +19,11 @@
         <td>{{category.id}}</td>
         <td>{{category.name}}</td>
         <td>{{category.urlHandle}}</td>
+        <td>
+          <a class="btn btn-light" [routerLink]="['/admin/categories', category.id]">
+            Edit
+          </a>
+        </td>
       </tr>
       </tbody>
     </table>
