--- a/Frontend/blogApp/src/app/features/blog-post/add-blogpost/add-blogpost.component.html
+++ b/Frontend/blogApp/src/app/features/blog-post/add-blogpost/add-blogpost.component.html
@@ -31,14 +31,30 @@
 
       <div class="mt-3">
         <label for="content" class="form-label">Content</label>
-        <textarea name="content"
-                  id="content"
-                  class="form-control"
-                  [(ngModel)]="model.content"></textarea>
+
+        <div class="d-flex flex-row">
+          <div class="col-6 p-2">
+            <textarea name="content"
+                      id="content"
+                      class="form-control"
+                      [(ngModel)]="model.content">
+            </textarea>
+          </div>
+
+          <div id="contentScroll" class="col-6 p-2">
+            <markdown [data]="model.content"></markdown>
+          </div>
+        </div>
       </div>
 
       <div class="mt-3">
         <label for="featuredImageUrl" class="form-label">Featured Image Url</label>
+
+        <ng-container *ngIf="model.featuredImageUrl !== ''">
+          <div>
+            <img id="featuredImage" class="my-2" [src]="model.featuredImageUrl" alt="imagePreview">
+          </div>
+        </ng-container>
         <input type="text"
                class="form-control"
                name="featuredImageUrl"
