--- a/Frontend/blogApp/src/app/features/blog-post/add-blogpost/add-blogpost.component.html
+++ b/Frontend/blogApp/src/app/features/blog-post/add-blogpost/add-blogpost.component.html
@@ -94,6 +94,21 @@
       </div>
 
       <div class="mt-3">
+        <label for="categories" class="form-label">Categories</label>
+        <ng-container *ngIf="categories$ | async as categories">
+          <select name="categories"
+                  id="categories"
+                  class="form-control"
+                  multiple
+                  [(ngModel)]="model.categories">
+            <option *ngFor="let category of categories" [value]="category.id">
+              {{category.name}}
+            </option>
+          </select>
+        </ng-container>
+      </div>
+
+      <div class="mt-3">
         <button class="btn btn-primary" type="submit">Save</button>
       </div>
     </div>
