--- a/Frontend/blogApp/src/app/features/blog-post/blogpost-list/blogpost-list.component.html
+++ b/Frontend/blogApp/src/app/features/blog-post/blogpost-list/blogpost-list.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <h1 class="mt-3">BlogPost List</h1>
-    <div class="d-flex justify-content-end mt-3">
-      <a [routerLink]="['/admin/blogposts/add']" class="btn btn-primary">Add BlogPost</a>
-    </div>
+  <div class="d-flex justify-content-end mt-3">
+    <a [routerLink]="['/admin/blogposts/add']" class="btn btn-primary">Add BlogPost</a>
+  </div>
 
   <ng-container *ngIf="blogPosts$ | async as blogPosts">
     <table class="table table-bordered mt-3">
@@ -11,6 +11,7 @@
         <th>Title</th>
         <th>Short Description</th>
         <th>Is Visible?</th>
+        <th>Categories</th>
       </tr>
       </thead>
       <tbody>
@@ -18,6 +19,11 @@
         <td>{{blogPost.title}}</td>
         <td>{{blogPost.shortDescription}}</td>
         <td>{{blogPost.isVisible}}</td>
+        <td>
+          <span *ngFor="let category of blogPost.categories">
+          <span class="badge bg-secondary me-2">{{category.name}}</span>
+        </span>
+        </td>
       </tr>
       </tbody>
     </table>
