Feat: BlogPost Update

--- a/Frontend/blogApp/src/app/features/blog-post/blogpost-list/blogpost-list.component.html
+++ b/Frontend/blogApp/src/app/features/blog-post/blogpost-list/blogpost-list.component.html
@@ -12,6 +12,7 @@
         <th>Short Description</th>
         <th>Is Visible?</th>
         <th>Categories</th>
+        <th></th>
       </tr>
       </thead>
       <tbody>
@@ -23,6 +24,9 @@
           <span *ngFor="let category of blogPost.categories">
           <span class="badge bg-secondary me-2">{{category.name}}</span>
         </span>
+        </td>
+        <td>
+          <a [routerLink]="['/admin/blogposts', blogPost.id]" class="btn btn-light">Edit</a>
         </td>
       </tr>
       </tbody>
