Feat: BlogPost Delete

--- a/Frontend/blogApp/src/app/features/blog-post/edit-blogpost/edit-blogpost.component.html
+++ b/Frontend/blogApp/src/app/features/blog-post/edit-blogpost/edit-blogpost.component.html
@@ -109,8 +109,9 @@
           </ng-container>
         </div>
 
-        <div class="mt-3">
+        <div class="mt-3 d-flex">
           <button class="btn btn-primary" type="submit">Save</button>
+          <button class="btn btn-danger ms-3" type="button" (click)="onDelete()">Delete</button>
         </div>
       </div>
     </form>
