--- a/Frontend/blogApp/src/styles.scss
+++ b/Frontend/blogApp/src/styles.scss
@@ -1,1 +1,34 @@
-/* You can add global styles to this file, and also import other style files */
+/** Global SCSS **/
+
+// --- Image modal --- //
+.images-container-modal {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 10;
+  padding: 50px;
+  background-color: rgba(0,0,0,0.5);
+}
+
+#image-modal-close-button {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+}
+
+// --- Blog Post Creation/Update --- //
+#content {
+  height: 350px;
+  max-height: 350px;
+}
+
+#contentScroll {
+  max-height: 350px;
+  overflow-y: scroll;
+}
+
+#featuredImage {
+  height: 100px;
+}
