Feat: UI - Add & Edit Blog Post with Image Upload

--- a/Frontend/blogApp/src/app/features/blog-post/edit-blogpost/edit-blogpost.component.html
+++ b/Frontend/blogApp/src/app/features/blog-post/edit-blogpost/edit-blogpost.component.html
@@ -127,6 +127,8 @@
     type="button"
     class="btn btn-light"
     id="image-modal-close-button"
-  (click)="this.isVisibleImageSelector = false">X</button>
+    (click)="this.isVisibleImageSelector = false">
+    X
+  </button>
   <app-image-selector></app-image-selector>
 </div>
