--- a/Frontend/blogApp/src/app/features/blog-post/add-blogpost/add-blogpost.component.html
+++ b/Frontend/blogApp/src/app/features/blog-post/add-blogpost/add-blogpost.component.html
@@ -49,6 +49,9 @@
 
       <div class="mt-3">
         <label for="featuredImageUrl" class="form-label">Featured Image Url</label>
+        <button type="button" class="btn btn-light" (click)="this.isVisibleImageSelector = true">
+          Select Image
+        </button>
 
         <ng-container *ngIf="model.featuredImageUrl !== ''">
           <div>
@@ -113,4 +116,16 @@
       </div>
     </div>
   </form>
+</div>
+
+<div class="images-container-modal"
+     [ngClass]="{'d-block': isVisibleImageSelector, 'd-none': !isVisibleImageSelector}">
+  <button
+    type="button"
+    class="btn btn-light"
+    id="image-modal-close-button"
+    (click)="this.isVisibleImageSelector = false">
+    X
+  </button>
+  <app-image-selector></app-image-selector>
 </div>
