--- a/Frontend/blogApp/src/app/shared/components/image-selector/image-selector.component.html
+++ b/Frontend/blogApp/src/app/shared/components/image-selector/image-selector.component.html
@@ -5,19 +5,24 @@
   <div class="card-body">
     <div class="d-flex flex-md-row flex-sm-column flex-wrap">
       <div class="col-8 p-4" id="image-modal-gallery">
+
         <ng-container *ngIf="images$ | async as images">
           <div class="d-flex flex-wrap">
             <div *ngFor="let image of images"
+                 (click)="selectImage(image)"
                  class="me-1 bg-white d-flex align-items-center flex-column border p-3"
                  id="image-modal-gallery-view">
+
               <img [src]="image.url"
                    [title]="image.title"
                    [alt]="image.title"
                    id="image-modal-in-gallery">
+
               <span class="mt-1">{{image.title}}</span>
             </div>
           </div>
         </ng-container>
+
       </div>
       <div class="col-4 p-4 bg-light">
         <h5>Upload Image</h5>
