--- a/Frontend/blogApp/src/styles.scss
+++ b/Frontend/blogApp/src/styles.scss
@@ -1,6 +1,7 @@
 /** Global SCSS **/
 
 // --- Image modal --- //
+
 .images-container-modal {
   width: 100%;
   height: 100%;
@@ -33,6 +34,7 @@
 }
 
 // --- Blog Post Creation/Update --- //
+
 #content {
   height: 350px;
   max-height: 350px;
@@ -45,4 +47,11 @@
 
 #featuredImage {
   height: 100px;
+}
+
+// --- Blog Public Pages --- //
+
+.blog-content img {
+  max-width: 100%;
+  margin: 2em 0 2em 0;
 }
