--- a/Frontend/blogApp/src/app/core/components/navbar/navbar.component.html
+++ b/Frontend/blogApp/src/app/core/components/navbar/navbar.component.html
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container">
     <a class="navbar-brand" href="#">Blog App</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -16,7 +17,9 @@
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" [routerLink]="['/admin/categories']">Categories</a></li>
-            <li><hr class="dropdown-divider"></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
             <li><a class="dropdown-item" [routerLink]="['/admin/blogposts']">BlogPosts</a></li>
             <!--            <li><a class="dropdown-item" href="#">Something else here</a></li>-->
           </ul>
@@ -25,7 +28,15 @@
     </div>
 
     <div class="d-flex">
-      <a [routerLink]="['/login']" class="btn btn-primary">Login</a>
+      <ng-container *ngIf="user === undefined; else showLogout">
+        <a [routerLink]="['/login']" class="btn btn-primary">Login</a>
+      </ng-container>
+      <ng-template #showLogout>
+        <div class="d-flex align-items-center">
+          <span>{{user?.email}}</span>
+          <button class="btn btn-primary ms-3" (click)="onLogout()">Logout</button>
+        </div>
+      </ng-template>
     </div>
   </div>
 </nav>
