Feat: UI - JWT Token to API & Interceptor / AuthGuard handling

--- a/Frontend/blogApp/src/app/core/components/navbar/navbar.component.html
+++ b/Frontend/blogApp/src/app/core/components/navbar/navbar.component.html
@@ -11,19 +11,21 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Admin
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" [routerLink]="['/admin/categories']">Categories</a></li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-            <li><a class="dropdown-item" [routerLink]="['/admin/blogposts']">BlogPosts</a></li>
-            <!--            <li><a class="dropdown-item" href="#">Something else here</a></li>-->
-          </ul>
-        </li>
+
+        <ng-container *ngIf="user !== undefined && user?.roles?.includes(Roles.Writer)">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Admin
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" [routerLink]="['/admin/categories']">Categories</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" [routerLink]="['/admin/blogposts']">BlogPosts</a></li>
+            </ul>
+          </li>
+        </ng-container>
       </ul>
     </div>
 
